<resources>
    <string name="app_name">CPS731Project</string>
    <string name="settings_title">Settings</string>
    <string name="themeSelect">Select App Theme</string>
    <string name="lightTheme">Light Theme</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="soundSelect">Sound On/Off</string>
    <string name="loginTitle">Find Me The Food:\nLogin</string>
    <string name="loginName">Username:</string>
    <string name="loginPass">Password:</string>
    <string name="namePrompt">Enter Username</string>
    <string name="passPrompt">Enter Password</string>
    <string name="loginBtn">Login</string>
    <string name="registerTxt">Don\'t have an account? Click here</string>
    <string name="registerTxtUL"><u>Don\'t have an account? Click here</u></string>
    <string name="registerTitle">Find Me The Food:\nRegistration</string>
    <string name="registerBtn">Register Account</string>
    <string name="mainTitle">Find Me The Food:\nMain Page</string>
    <string name="findRestaurants">Find Restaurants</string>
    <string name="settingsPage">Settings</string>
    <string name="findRestaurantsTitle">Find Me The Food:\nCriteria</string>
    <string name="setLocation">Set Location</string>
    <string name="stars">Enter Min. Number of Stars:</string>
    <string name="restaurantType">Restaurant Type:</string>
    <string name="priceRange">Price Range:</string>
    <string name="open">Open Now:</string>
    <string name="listRestauranatsTitle">Find Me The Food:\nResults</string>
    <string name="random">Select Random Restaurant</string>
    <string-array name="numStars">
        <item>N/A</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="restaurantType">
        <item>N/A</item>
        <item>Chinese</item>
        <item>Mexican</item>
        <item>Vietnamese</item>
        <item>Korean</item>
        <item>German</item>
        <item>Indian</item>
    </string-array>
    <string-array name="priceRange">
        <item>0</item>
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>$$$$</item>
    </string-array>
</resources>