<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/SettingstxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/themeSelect" />

    <RadioGroup
        android:id="@+id/themeRdoGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp">

        <RadioButton
            android:id="@+id/selectLightTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/lightTheme"
            tools:text="@string/lightTheme" />

        <RadioButton
            android:id="@+id/selectDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/darkTheme"
            tools:text="@string/darkTheme" />

    </RadioGroup>

    <Switch
        android:id="@+id/soundToggle"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:checked="false"
        android:text="@string/soundSelect"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
</LinearLayout>
